--- a/projects.json
+++ b/projects.json
@@ -19,9 +19,14 @@
     "url": "https://mathquiz.dgps.dev",
     "description": "This is a simple math quiz. It is on my level and is a medium sized difficulty."
   },
-{
- "name": "DAR",
-  "url": "https://dar.dgps.dev",
-  "description": "DAR is an AI assistant that is incredibly futuristic, it is voice only so all you need to do is talk."
-}
- ]
+  {
+    "name": "DAR",
+    "url": "https://dar.dgps.dev",
+    "description": "DAR is an AI assistant that is incredibly futuristic, it is voice only so all you need to do is talk."
+  },
+  {
+    "name": "CrazyMotorcycle",
+    "url": "https://crazymoto.dgps.dev",
+    "description": "CrazyMoto is a fast-paced motorcycle game where you can race, stunt, and play endlessly."
+  }
+]
